# gnome-class

./: .gitignore  Cargo.toml  README.md  build.rs  notes.md
gnome-class-shims/: Cargo.toml
gnome-class-shims/src/: lib.rs
gobject-notes/: notes.txt  signals.txt  syntax.md
plugin/: Cargo.toml  TAGS
plugin/examples/: basic.rs  drop.rs
plugin/src/: ast.rs  errors.rs  lib.rs  param.rs  parser.lalrpop  parser.rs
plugin/src/param/: mod.rs
plugin/src/parser/: grammar.lalrpop  grammar.rs  mod.rs
plugin/src/tok/: mod.rs  test.rs
plugin/tests/: basic.rs  drop.rs
src/: ast.rs  checking.rs  errors.rs  g.rs  glib_utils.rs  gobject.rs  lib.rs  macros.rs  ptr.rs
src/hir/: mod.rs
src/mock/: README.md  counter.h  mod.rs  param-notes.txt  signal-notes.txt  test-counter.c  test.rs
src/param/: test.rs
src/parser/: grammar.lalrpop  grammar.rs  mod.rs
src/real/: mod.rs  test.rs
src/tok/: mod.rs
tests/: argument-types.rs  basic.rs  drop.rs  lib-unit-tests.rs  no-instance-private.rs  override.rs  signals.rs
