[package]
name = "gobject-gen"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
# build = "build.rs" # LALRPOP preprocessing

[lib]
proc-macro = true
test = false

# Add a dependency on the regex crate; this is not
# needed if you are writing your own tokenizer by
# hand (or if you are already using the regex crate)
[dependencies.regex]
version = "0.2.1"

# Add a dependency on the LALRPOP runtime library:
[dependencies.lalrpop-util]
version = "0.13.1"

# [build-dependencies.lalrpop]
# version = "0.13.1"

[dependencies]
error-chain = "0.11.0-rc.2"
quote = { git = "https://github.com/dtolnay/quote" }
unicode-xid = "0.0.4"
rustfmt = "*"
glib = { git = "https://github.com/gtk-rs/glib" }
gobject-sys = { git="https://github.com/gtk-rs/sys", version="0.4.0" }
libc = "0.2"
proc-macro2 = { version="0.1.3", features=["unstable"] }
syn = { git="https://github.com/dtolnay/syn", features=["full"] }
synom = { git="https://github.com/dtolnay/syn" }

[dev-dependencies]
glib-sys = { git="https://github.com/gtk-rs/sys", version="0.4.0" }
lazy_static = "0.2.2"

# FIXME(rust-lang/rust#45934) should be able to use upstream `quote`, but not
# clear how to "fix" upstream quote yet (if at all)
[patch.'https://github.com/dtolnay/quote']
quote = { git = 'https://github.com/alexcrichton/quote', branch = 'span-call-site' }
