[package]
name = "gobject-gen"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Federico Mena Quintero<federico@gnome.org>",
           "Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true
test = false

[dependencies]
error-chain = "0.11.0-rc.2"
glib = { version="0.4.1", git = "https://github.com/gtk-rs/glib" }
gobject-sys = { version="0.5.0", git="https://github.com/gtk-rs/sys" }
libc = "0.2"
proc-macro2 = { version="0.2", features=["nightly"] }
quote = { version="0.4" }
rustfmt = "0.10.0"
syn = { version="0.12.13", features=["full"] }
unicode-xid = "0.0.4"

[dev-dependencies]
glib-sys = { version="0.5.0", git="https://github.com/gtk-rs/sys" }
